# vdepn

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  autogen.sh  conf_parser.vala  configure.ac  mainwindow.vala  makedeb.sh  makerpm.sh
extra/: debian_patches.diff
po/: POTFILES.in  it.po
share/: .cvsignore  Makefile.am  vdepn.desktop  vdepn.xml
src/: Makefile.am  conf_parser.vala  configuration_list.vala  configuration_page.vala  configuration_property.vala  helper.vala  helpers.vala  main.vala  mainwindow.vala  polkit.c  polkit_wrapper.vala  preferences.vala  tray_icon.vala  vde_connector.vala  vde_manager
vapi/: Makefile.am  config.vapi
