AC_INIT([VDE PN Manager], [0.3.2], [gengarel@cs.unibo.it], [vde_manager])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE
AM_INIT_AUTOMAKE

VALA_REQUIRED=0.7.0
GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.14.0
LIBXML_REQUIRED=2.7.0
LIBNOTIFY_REQUIRED=0.5.0

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_LIBTOOL
AM_PROG_VALAC($VALA_REQUIRED)
AC_SUBST(VALAC)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED
						gobject-2.0 >= $GLIB_REQUIRED
						gio-2.0 >= $GLIB_REQUIRED)

PKG_CHECK_MODULES(GTK, gdk-2.0 >= $GTK_REQUIRED
					   gtk+-2.0 >= $GTK_REQUIRED)

PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= $LIBXML_REQUIRED)

PKG_CHECK_MODULES(LIBNOTIFY, libnotify >= $LIBNOTIFY_REQUIRED)

OS_CFLAGS="-DPKGDATADIR='\"\$(prefix)\"'"

AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)
AC_SUBST(LIBNOTIFY_CFLAGS)
AC_SUBST(LIBNOTIFY_LIBS)
AC_SUBST(OS_CFLAGS)

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	share/Makefile])

AC_OUTPUT
